# AI-Database-Assistant

./: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/: config.py  main.py  models.py  requirements.txt
backend/api/: chat.py  database.py
backend/database/: connection.py  schema.py
backend/llm/: model.py  prompts.py
frontend/: index.html  script.js  style.css
frontend/components/: chat.js
