[project]
name = "ai-database-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "groq>=1.5.0",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
